@@ -57,8 +57,8 @@ make install \
 %{_mandir}/man8/*
 
 %changelog
-* Mon Feb 18 2008 - dgilbert at interlog dot com
-- allow multiple devices to be given
+* Thu Mar 13 2008 - dgilbert at interlog dot com
+- allow multiple devices to be given, profile and speed commands
   * sdparm-1.03
 * Mon Oct 08 2007 - dgilbert at interlog dot com
 - add block device characteristics VPD page, descriptor based mpages
